<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/app_icon" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bansen"
                        android:gravity="center"
                        android:text="@string/rate5star"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/grey_90"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/bansen"
                        android:gravity="center"
                        android:text="@string/ratemess"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_40"
                        android:textSize="22sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rating_bar"
                    style="@style/Yellow.AppCompatRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    android:theme="@style/Yellow.AppCompatRatingBar"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey_10" />

            <LinearLayout
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/grey_3"
                        android:fontFamily="@font/bansen"
                        android:gravity="top"
                        android:hint="@string/providefeedback"
                        android:lines="4"
                        android:padding="10dp"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_send_black_24dp"
                        app:tint="@color/black"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:gravity="center"

                    android:text="@string/rateuspopup"
                    android:theme="@style/Button.Primary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="2px"
                    android:layout_height="match_parent"
                    android:background="@color/grey_10" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    style="@style/Button.Accent.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bansen"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:text="@string/close" />

                <View
                    android:layout_width="2px"
                    android:layout_height="match_parent"
                    android:background="@color/grey_10" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/exit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/exit" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>